# rust-mongo-rest-api

./: Cargo.toml  README.md  Settings.toml
src/: config.rs  handler.rs  main.rs  routing.rs
src/model/: book.rs  database.rs  list_option.rs  mod.rs
