[package]
name = "getting-started"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.1.0", features = ["chrono-0_4"] }
futures = "0.3"
warp = "0.3"
chrono = "0.4"
tokio = { version = "1.15.0", features = ["full"] }
mongodb = { version = "2.0.0", features = ["tokio-runtime"] }
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#[workspace]
#members = ["config"]